fix: prevents overlapping when both labels are long and close

--- a/src/components/Blocks/CustomTemplates/VoltoSearchBlock/range.css
+++ b/src/components/Blocks/CustomTemplates/VoltoSearchBlock/range.css
@@ -13,6 +13,13 @@
   white-space: nowrap;
 }
 
+/* second label, prevents overlapping when both labels are long CLMS-1459 */
+.input-range__track.input-range__track--background
+  span.input-range__slider-container:nth-child(3)
+  span.input-range__label.input-range__label--value {
+  width: 15px;
+}
+
 .range-container {
   padding-right: 15px;
   padding-left: 15px;
